// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Img component (SSR) > passes style and other props correctly 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">

<img src="cat.jpg" alt="Cat" width="300" height="300" style="display: block; border: solid 1px black; text-decoration: none; background-color: red;" data-testid="img-test">"
`;

exports[`Img component (SSR) > renders correctly with default styles and props 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">

<img src="cat.jpg" alt="Cat" width="300" height="300" style="display: block; border: none; text-decoration: none;">"
`;
